# Simba

./: .env  .gitignore  db.sqlite3  pyproject.toml
config/: exception_handler.py  settings.py  urls.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_notification.py
products/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_add_discount_percent.py
users/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
